# final_project

./: .env  .gitignore  .pre-commit-config.yaml  API.ipynb  Dockerfile  Dockerfile-cd  Dockerfile-mlflow  README.md  action_test.txt  compose.yaml  get.ipynb  mlflow-compose.yaml  pyproject.toml  pytest.ini  requirements.txt  test.txt
.astro/: config.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: PULL_REQUEST_TEMPLATE.md  feature_request.md
.github/workflows/: cd.yaml  cd_workflow.yaml
app/: database.py  main.py  utils.py
app/core/: config.py  container.py  lifespan.py  model_registry.py  redis.py
app/core/db/: session.py
app/core/errors/: error.py
app/core/middlewares/: metirc_middleware.py  sqlalchemy.py
app/mlruns/0/: meta.yaml
app/models/db/: movie_.py  movie_model.py
app/models/dtos/: movie_.py  movie_model.py
app/models/schemas/: common.py  model_.py  movie_.py
app/repositories/: __init__.py  model_repository.py  movie_repository.py
app/routers/: __init__.py  model.py  movie.py
app/services/: __init__.py  model_service.py  movie_service.py
app/stats/: stat.py
dags/: data_pipeline.py  model_training_dag.py  movie_dag.py  test_dag.py  weather_dag.py
dags/module/: __init__.py  classification.py  create_table.py  data_modules.py  delay.py  get_data.py  get_test.py  load_data.py  model_version.py  preprocess.py  preprocess_data.py  save_raw_data.py  save_raw_data_org.txt  train.py  train_test.py  transit_model.py
prometheus-grafana/: prometheus.yml
tests/app/: conftest.py
tests/preformance_test/: locust.py
(+4 files in other folders)
