[tool.poetry]
name = "movie-api"
version = "0.1.0"
description = ""
authors = ["SuminHam <hsm4317@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
scikit-learn = "^1.5.0"
mlflow = "1.27.0"
psycopg2-binary = "^2.9.9"
boto3 = "^1.34.110"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pydantic-settings = "^2.2.1"
asyncpg = "^0.29.0"
starlette-context = "^0.3.6"
redis = "^5.0.4"
xgboost = "^2.0.3"
prometheus-client = "^0.20.0"
locust = "^2.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
